// Vitest Snapshot v1

exports[`match snapshot for simple template 1 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "padding": "5px 0px 5px 0px",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for simple template with button 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "padding": "5px 0px 5px 0px",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "align": "center",
                    "background-color": "#8a3c90",
                    "border": "0px solid transparent",
                    "border-radius": "4px",
                    "color": "#ffffff",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "font-family": "Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif",
                    "font-size": "16px",
                    "href": "",
                    "inner-padding": "5px 20px 5px 20px",
                    "padding": "0px 0px 0px 0px",
                  },
                  "content": "<div class=\\"txtTinyMce-wrapper\\"><p style='font-family: TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif;'>Button</p></div>",
                  "tagName": "mj-button",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "padding": "5px 0px 5px 0px",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for simple template with two buttons 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "padding": "5px 0px 5px 0px",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "align": "center",
                    "background-color": "#8a3c90",
                    "border": "0px solid transparent",
                    "border-radius": "4px",
                    "color": "#ffffff",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "font-family": "Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif",
                    "font-size": "16px",
                    "href": "",
                    "inner-padding": "5px 20px 5px 20px",
                    "padding": "0px 0px 0px 0px",
                  },
                  "content": "<div class=\\"txtTinyMce-wrapper\\"><p style='font-family: TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif;'>Button</p></div>",
                  "tagName": "mj-button",
                  "uid": "mocked-uuid",
                },
                {
                  "attributes": {
                    "align": "center",
                    "background-color": "#8a3c90",
                    "border": "0px solid transparent",
                    "border-radius": "4px",
                    "color": "#ffffff",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "font-family": "Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif",
                    "font-size": "16px",
                    "href": "",
                    "inner-padding": "5px 20px 5px 20px",
                    "padding": "0px 0px 0px 0px",
                  },
                  "content": "<div class=\\"txtTinyMce-wrapper\\"><p style='font-family: TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif;'>Button</p></div>",
                  "tagName": "mj-button",
                  "uid": "mocked-uuid",
                },
                {
                  "attributes": {
                    "align": "center",
                    "background-color": "#8a3c90",
                    "border": "0px solid transparent",
                    "border-radius": "4px",
                    "color": "#ffffff",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "font-family": "Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif",
                    "font-size": "16px",
                    "href": "",
                    "inner-padding": "5px 20px 5px 20px",
                    "padding": "0px 0px 0px 0px",
                  },
                  "content": "<div class=\\"txtTinyMce-wrapper\\"><p style='font-family: TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif;'>Button</p></div>",
                  "tagName": "mj-button",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "padding": "5px 0px 5px 0px",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;
